Fixed position of alert banner on mobile.

--- a/imports/ui/_mobile.scss
+++ b/imports/ui/_mobile.scss
@@ -1,8 +1,14 @@
 @media (orientation: portrait) {
   @supports(padding-top: env(safe-area-inset-top)) {
+
     .mobile-app {
       padding-top: unquote('max(env(safe-area-inset-top), 15px)');
     }
+
+    #layout.mobile-app .alert {
+      top: calc(env(safe-area-inset-top) + .5rem);
+    }
+
     #status {
       position: fixed;
       z-index: 999;
@@ -14,6 +20,7 @@
       -webkit-backdrop-filter: blur(2rem);
       backdrop-filter: blur(2rem);
     }
+
   }
 }
 
